# svg

./: .gitignore  Cargo.toml
derive/: Cargo.toml
dom/: Cargo.toml
dom/src/: animate.rs  attrs.rs  ellipse.rs  error.rs  filter.rs  g.rs  gradient.rs  lib.rs  macros.rs  paint.rs  path.rs  polygon.rs  rect.rs  svg.rs  util.rs  value.rs
dom/src/parser/: color.rs  mod.rs
draw/: Cargo.toml
draw/examples/: animate.rs  rasterize.rs  show.rs  validate.rs
draw/src/: animate.rs  attrs.rs  draw.rs  ellipse.rs  filter.rs  g.rs  gradient.rs  lib.rs  macros.rs  path.rs  polygon.rs  rect.rs  resolve.rs  svg.rs
draw/src/text/: chunk.rs  font.rs  mod.rs
examples/: animate.rs  parse.rs
src/: animate.rs  attrs.rs  debug.rs  draw.rs  ellipse.rs  error.rs  filter.rs  g.rs  gradient.rs  lib.rs  macros.rs  paint.rs  path.rs  polygon.rs  prelude.rs  rect.rs  svg.rs  text.rs  util.rs
src/parser/: color.rs  mod.rs
test_data/: build.sh
tests/: rect.rs
text/: Cargo.toml
text/src/: lib.rs  tags.rs
web/: Cargo.toml  Makefile  index.html  index.js  style.css
web/src/: lib.rs
