[workspace]

members = [
    "dom",
    "draw",
    "text",
    "web",
]

default-members = [
    "dom",
    "draw",
    "text",
    "web"
]

#[patch.crates-io]
#pathfinder_geometry = { path = "../pathfinder/geometry" }
#pathfinder_content = { path = "../pathfinder/content" }
#pathfinder_simd = { path = "../pathfinder/simd" }
#pathfinder_renderer = { path = "../pathfinder/renderer" }
#pathfinder_color = { path = "../pathfinder/color" }

#[patch."https://github.com/servo/pathfinder"]
#pathfinder_geometry = { path = "../pathfinder/geometry" }
#pathfinder_content = { path = "../pathfinder/content" }
#pathfinder_simd = { path = "../pathfinder/simd" }
#pathfinder_color = { path = "../pathfinder/color" }
#pathfinder_renderer = { path = "../pathfinder/renderer" }
#pathfinder_export = { path = "../pathfinder/export" }
#pathfinder_gl = { path = "../pathfinder/gl" }
#pathfinder_webgl = { path = "../pathfinder/webgl" }
#pathfinder_resources = { path = "../pathfinder/resources", default-features=false, features=["gl3_shaders", "textures_lut"] }

[patch."https://github.com/s3bk/svg"]
svg_dom = { path = "dom" }

#[patch."https://github.com/s3bk/pathfinder_view"]
#pathfinder_view = { path = "../pathfinder_view" }

#[patch."https://github.com/pdf-rs/font"]
#font = { path = "../font", features=["svg"] }
