[package]
name = "svg_derive"
version = "0.1.0"
authors = ["Sebastian K <s3bk@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"

[lib]
proc-macro = true
