[package]
name = "svg_draw"
version = "0.1.0"
authors = ["Sebastian K <s3bk@protonmail.com>"]
edition = "2018"

[features]
debug = []

[dependencies]
svg_dom = { path = "../dom" }
svg_text = { path = "../text" }
svgtypes = "0.5"
log = "0.4.8"
itertools = "0.9.0"
libflate = "1.0.1"
pathfinder_geometry = { git = "https://github.com/servo/pathfinder/" }
pathfinder_content = { git = "https://github.com/servo/pathfinder/" }
pathfinder_renderer = { git = "https://github.com/servo/pathfinder/" }
pathfinder_color = { git = "https://github.com/servo/pathfinder/" }
pathfinder_simd = { git = "https://github.com/servo/pathfinder/" }
font = { git="https://github.com/pdf-rs/font", features=["svg"] }
lazy_static = { version = "1.4.0" }
palette = "0.5.0"
nom = "5.1.2"
unic-bidi = "0.9"
unic-segment = "0.9"
isolang = "1.0"

[dev-dependencies]
pathfinder_resources = { git = "https://github.com/servo/pathfinder/" }
pathfinder_view = { git = "https://github.com/s3bk/pathfinder_view/" }
env_logger = "*"
