[package]
name = "svg_text"
version = "0.1.0"
authors = ["Sebastian K <s3bk@protonmail.com>"]
edition = "2018"

[features]
svg = ["font/svg"]
default = ["svg"]

[dependencies]
font = { git = "https://github.com/pdf-rs/font", default-features = false, features = ["opentype"] }
pathfinder_geometry = { git = "https://github.com/servo/pathfinder/" }
pathfinder_content = { git = "https://github.com/servo/pathfinder/" }
itertools = "0.9.0"
unicode-joining-type = "0.3"
unic-ucd-category = "0.9"
unic-segment = "0.9"
log = "0.4"
whatlang = "0.9"
isolang = "2.4"